--- a/src/index.css
+++ b/src/index.css
@@ -414,4 +414,20 @@ a {
         color: #333;
         padding: 5px;
     }
+
+    .vantagens {
+        display: flex;
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    .vantagensItem {
+        width: 28%;
+        margin: 15px 0;
+        box-shadow: 0 5px 20px #999;
+        text-align: center;
+        padding: 15px;
+    }
 }
